Moved fetching product-shelf association to ProductShelfController